--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -49,3 +49,84 @@
 	date={2021-08-25},
 	urldate={2022-03-31},
 }
+
+@online{block3,
+	author={Creative Commons},
+	url={https://creativecommons.org/licenses/},
+	title={Sobre las licencias},
+	date={2017-11-07},
+	urldate={2022-03-29},
+}
+
+@online{block4,
+	author={La Moncloa},
+	url={https://www.lamoncloa.gob.es/consejodeministros/resumenes/Paginas/2022/010222-rp_cministros.aspx},
+	title={El Gobierno aprueba la Ley por el Derecho a la Vivienda},
+	date={2022-02-01},
+	urldate={2022-03-28},
+}
+
+@online{block5,
+	author={Similarweb},
+	url={https://www.similarweb.com/top-websites/spain/category/business-and-consumer-services/real-estate/},
+	title={Top Websites Ranking for Real Estate in Spain},
+	date={2022-03-01},
+	urldate={2022-03-21},
+}
+
+@online{block6,
+	author={Pypi},
+	url={https://pypi.org/project/python-whois/},
+	title={python-whois 0.7.3},
+	date={2020-06-17},
+	urldate={2022-04-06},
+}
+
+@online{block7,
+	author={Instituto de Estadística de la Comunidad de Madrid},
+	url={http://www.madrid.org/iestadis/fijas/estructu/general/anuario/ianucap10.htm},
+	title={Anuario Estadístico de la Comunidad de Madrid. 1985-2022. Urbanismo, vivienda y construcción},
+	date={2022-01},
+	urldate={2022-03-23},
+}
+
+@online{block8,
+	author={OXFAM},
+	url={https://oxfamilibrary.openrepository.com/bitstream/handle/10546/621341/bp-inequality-kills-170122-es.pdf},
+	title={Las desigualdades matan},
+	date={2022-01},
+	urldate={2022-03-27},
+}
+
+@online{block9,
+	author={El Observatorio Social de la Fundación ”la Caixa”},
+	url={https://elobservatoriosocial.fundacionlacaixa.org/documents/22890/492074/T01_ID_ES_AyalaCant%C3%B3.pdf/a0746431-109f-e009-6c77-296c378f0438?t=1642072938395},
+	title={Radiografía de medio siglo de desigualdad en España},
+	date={2022-01},
+	urldate={2022-03-27},
+}
+
+@online{block10,
+	author={Fundación FOESSA},
+	url={https://www.foessa.es/blog/foessa-presenta-la-primera-radiografia-social-completa-de-la-crisis-de-la-covid-19-en-toda-espana/},
+	title={FOESSA presenta la primera radiografía social completa de la crisis de la COVID-19 en toda España},
+	date={2022-01-18},
+	urldate={2022-03-27},
+}
+
+@online{block11,
+	author={Instituto Nacional de Estadística},
+	url={https://www.ine.es/jaxiT3/Datos.htm?t=2881},
+	title={Cifras oficiales de población resultantes de la revisión del Padrón municipal a 1 de enero},
+	date={2022-01-01},
+	urldate={2022-03-27},
+}
+
+@online{block12,
+	author={Instituto Nacional de Estadística},
+	url={https://www.ine.es/dyngs/INEbase/es/operacion.htm?c=Estadistica_C&cid=1254736176802&menu=ultiDatos&idp=1254735976607},
+	title={Índice de precios de consumo. Base 2021 - Avance. Marzo 2022},
+	date={2022-03},
+	urldate={2022-04-02},
+}
+
