--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -226,11 +226,11 @@ Para obtener los datos se ha utilizado las siguientes tecnologías:
 
 \vspace{-1.5em}\section{Agradecimientos}\vspace{-1.5em}
 
-A continuación se aborda el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y la necesidad de diferenciar claramente entre ellos.
+A continuación se abordará el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y la necesidad de diferenciar claramente entre ellos. 
 
 \underline{Propietarios de los datos}
 
-Como se ha indicado en otros apartados nos encontramos ante un proyecto en el que se integran \textbf{dos fuentes de datos} diferentes, con sus respectivos propietarios de los datos. 
+Como se ha indicado en otros apartados este es un proyecto en el que se integran \textbf{dos fuentes de datos} diferentes, con sus respectivos propietarios de los datos. 
 
 Por un lado, sobre el portal web \href{http://www.idealista.com}{\textbf{\underline{Idealista}}}, cuyo fundador y CEO es Jesús Encinar, es importante destacar que la empresa está registrada como una Sociedad Anónima Unipersonal (Idealista S.A.U) fundada en el año 2000, aunque en la actualidad está participada mayoritariamente por los fondos gestionados por EQT. En estos momentos opera además en Portugal e Italia, países en los que no nos centramos en este proyecto, pero cuya estructura de la web es idéntica, con todo lo que esto implica. 
 
@@ -240,7 +240,7 @@ Por otro lado, según explican ellos mismos y se puede verificar en gran medida 
 
 En cuanto al portal web \href{https://www.fotocasa.es/es/}{\textbf{\underline{Fotocasa}}}, pertenece a Adevinta Spain S.L.U., empresa que también es propietaria del portal inmobiliario \href{https://www.habitaclia.com/madrid}{\textbf{\underline{Habitaclia}}} y se fundó en 1999. Al contrario que con Idealista, la estructura de los portales de los que Adevinta es propietaria es diferente en cada caso. Con Fotocasa, además, no se obtiene ningún tipo de información del dominio mediante \textit{whois}. 
 
-Por otro lado, son menos transparentes en cuanto a cómo está \textbf{desarrollado} el portal, aunque sí que se han detectado el uso de bases de datos, motores de búsquedas y lenguajes de programación PHP y JavaScript.
+En este sentido, son menos transparentes en cuanto a cómo está \textbf{desarrollado} el portal, aunque sí que se han detectado el uso de bases de datos, motores de búsquedas y lenguajes de programación PHP y JavaScript.
 
 \underline{Trabajos anteriores}
 
@@ -264,18 +264,17 @@ En relación a \textbf{análisis} en sí mismos, no se ha encontrado ninguno rel
 
 \underline{Pasos para actuar con principios éticos y legales}
 
-Este es uno de los apartados\textbf{ más complejos} del proyecto y que hemos tratado con especial sensibilidad.
+Este es uno de los apartados\textbf{ más complejos} del proyecto y que se ha tratado con especial sensibilidad.
 
 Según se recoge en el fichero \href{https://www.idealista.com/robots.txt}{\textbf{\underline{robots.txt}}} de \textbf{Idealista}, están específicamente no permitidas algunas de las acciones contempladas en este proyecto, como la navegación a través de la \textbf{paginación} ("Disallow: /*/pagina-*.htm") o el empleo de más de dos \textbf{filtros} ("Disallow: /venta-*,*,*," o "Disallow: /venta-*,"), cuando en este caso se están empleando tres: viviendas + Madrid + distrito. 
 
 Según se recoge en el fichero \href{https://www.fotocasa.es/robots.txt}{\textbf{\underline{robots.txt}}} de \textbf{Fotocasa}, por su parte, el portal es mucho menos restrictivo. Sin embargo, también está especificado que no se permite la navegación a través de la \textbf{paginación} a partir de la cuarta incluida ("Disallow: */l/4*" hasta "Disallow: */l/39*"), condición necesaria para el proyecto planteado. No obstante, para la búsqueda de las viviendas de cada distrito no se incumple ninguna restricción ya que, según la construcción de la URL no está especificada como tal. Por ejemplo, el archivo indica "Disallow: /*filter=*" pero la URL de Villaverde es https://www.fotocasa.es/es/comprar/viviendas/madrid-capital/villaverde/l?sortType=scoring. Además, este tipo de \textit{sortType} es el único permitido, por lo que tampoco entra en conflicto con las indicaciones del propietario. 
 
-
-Así, y teniendo en cuenta que estas restricciones son "solo una sugerencia y \textbf{nunca una obligación}", tal y como se señala en el documento 'Web scraping', además de tenerlas en cuenta para reducir las posibilidades de ser bloqueados, se decide que este proyecto tenga una finalidad \textbf{exclusivamente educativa}. Es interesante que trabajando ambos portales, las posibilidades de aprendizaje se disparan exponencialmente pero, sin embargo, no debemos olvidar la voluntad de los propietarios de los mismos. Por ello, en todo momento se intenta mantener el equilibrio y, sobre todo, \textbf{respeto} hacia Idealista y Fotocasa. 
+Así, y teniendo en cuenta que estas restricciones son "solo una sugerencia y \textbf{nunca una obligación}", tal y como se señala en el documento 'Web scraping', además de tenerlas en cuenta para reducir las posibilidades de ser bloqueados, se decide que este proyecto tenga una finalidad \textbf{exclusivamente educativa}. Es interesante que trabajando ambos portales, las posibilidades de aprendizaje se disparan exponencialmente pero, sin embargo, no se debe olvidar la voluntad de los propietarios de los mismos. Por ello, en todo momento se intenta mantener el equilibrio y, sobre todo, \textbf{respeto} hacia Idealista y Fotocasa. 
 
 \underline{Agradecimiento final}
 
-Debido a todo lo expuesto en este apartado, agradecemos tanto a \textbf{Idealista} como a \textbf{Fotocasa} el haber servido como soporte para el proceso de aprendizaje que hemos desarrollado durante este proyecto de captura de datos, los cuales serán empleados con un fin exclusivamente académico. Además, hacemos extensible este agradecimiento a las personas mencionadas en \textbf{trabajos anteriores} por haber hecho público el conocimiento que han adquirido y que ha servido de punto de partida para este proyecto o para solventar obstáculos que nos hemos encontrado. 
+Debido a todo lo expuesto en este apartado, se agradece tanto a \textbf{Idealista} como a \textbf{Fotocasa} el haber servido como soporte para el proceso de aprendizaje que se ha desarrollado durante este proyecto de captura de datos, los cuales serán empleados con un fin exclusivamente académico. Además, se hace extensible este agradecimiento a las personas mencionadas en \textbf{trabajos anteriores} por haber hecho público el conocimiento que han adquirido y que ha servido de punto de partida para este proyecto o para solventar obstáculos que nos hemos encontrado. 
 
 \vspace{-1.5em}\section{Inspiración }\vspace{-1.5em}
 
